# 3d-plotter

./: .gitignore  3d_plotter  CMakeLists.txt  Makefile  README.md  fragment_shader.glsl  gl_framework.cpp  gl_framework.hpp  main.cpp  vertex_shader.glsl
common/: CMakeLists.txt  gl_helpers.cpp  gl_helpers.hpp
week01_cpp/: CMakeLists.txt  function_overloading.cpp  operator_overloading.cpp  raii.cpp  references.cpp  smart_pointers.cpp  templates_preview.cpp
week02_triangle/: CMakeLists.txt  main.cpp
week02_triangle/shaders/: triangle.vert
week03_cube/: CMakeLists.txt  main.cpp  orbit_camera.hpp
week04_rubiks/: CMakeLists.txt  main.cpp  rubiks.cpp  rubiks.hpp
week04_rubiks/shaders/: cubelet.frag  cubelet.vert
